# sian

./: CMakeLists.txt  LICENSE  README.md
include/: animated_value.hh  animator.hh  circle.hh  color.hh  config.hh  horizontal_layout.hh  line.hh  object.hh  offset.hh  pace_value.hh  payload_type.hh  rectangle.hh  rectangle_container.hh  scene.hh  shape.hh  sian.hh
src/: animator.cc  color.cc  config.cc  logger.cc  logger.hh  main.cc  offset.cc  pace_value.cc  scene.cc  utils.hh
src/animation/: animated_value.cc  animation_strategy.hh  dynamic_value_strategy.hh  function_strategy.hh  instruction.hh  payload_type.cc
src/objects/: circle.cc  horizontal_layout.cc  line.cc  object.cc  rectangle.cc  rectangle_container.cc  shape.cc
